Removed toast due to UX problem and fixed dark mode for footer

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -5,11 +5,22 @@ footer {
     padding: 0 3rem;
     margin: 3vw 0 1vw 0;
 
+    @media screen and (max-width: 767px) {
+        padding: 0 1rem;
+    }
+
     section {
         display: grid;
         grid-template-columns: 4fr 2fr;
         margin-bottom: 7rem;
         padding-top: 2rem;
+
+        @media screen and (max-width: 768px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+            gap: 1rem;
+            margin-bottom: 3rem;
+        }
         
 
         #copy-email-button {
@@ -60,8 +71,31 @@ footer {
                     transition: 400ms ease;
                 }
             }
+
+            @media screen and (max-width: 767px) {
+                flex-direction: column;
+                gap: 1rem;
+                justify-content: flex-start;
+            }
         }
     }
-    
-    
+}
+body.dark-mode {
+
+    footer {
+        border-color: darken($color: $rp-muted, $amount: 10);
+    }
+
+    #copy-email-button {
+        background-color: $rp-base;
+        color: $rp-text;
+
+        &:hover {
+            background-color: $rp-overlay;
+        }
+    }
+
+    a:hover h5 {
+        color: $rp-foam;
+    }
 }
